增加2个全局参数